# psygraph

./: .gitignore  README.md
backend/: db.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: quiz.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  answer.py  entity.py  question.py
backend/app/schemas/: quiz.py
backend/app/services/: scoring.py
backend/psygraph_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: add_data.py  update_names.py
backend/swcpq_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_quiz.py
frontend/: index.html  index.js
frontend/css/: style.css
frontend/js/: questions.js
frontend/pages/: 3d.html  introductory.html  questions.html
testing/: index.html  index.js
