[project]
name = "psygraph-backend"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sqlalchemy[asyncio]>=2.0",
  "pandas>=2.0",
  "aiosqlite>=0.20",
  "numpy>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
